--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ text-align: center;
 margin-top: 5rem;
 margin-bottom: 0;
 transition: background-color 0.2s ease-out;
+color: var(--Cream);
 
   
   }
